--- a/package.json
+++ b/package.json
@@ -22,7 +22,10 @@
     "body-parser": "^1.18.2",
     "express": "^4.16.3",
     "express-handlebars": "^3.0.0",
+    "google-auth-library": "^0.12.0",
+    "googleapis": "^25.0.0",
     "mysql2": "^1.5.2",
+    "request": "^2.85.0",
     "sequelize": "^4.36.1"
   }
 }
