--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "google-auth-library": "^0.12.0",
     "googleapis": "^25.0.0",
     "mysql2": "^1.5.2",
+    "passport-google-oauth": "^1.0.0",
     "request": "^2.85.0",
     "sequelize": "^4.36.1"
   }
