--- a/package.json
+++ b/package.json
@@ -1,37 +1,39 @@
 {
-  "name": "Papayas-Project-2",
-  "version": "1.0.0",
-  "description": "",
-  "main": "server.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/petercboss/Papayas-Project-2.git"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/petercboss/Papayas-Project-2/issues"
-  },
-  "homepage": "https://github.com/petercboss/Papayas-Project-2#readme",
-  "dependencies": {
-    "bcrypt-nodejs": "0.0.3",
-    "body-parser": "^1.18.2",
-    "dotenv": "^5.0.1",
-    "express": "^4.16.3",
-    "express-handlebars": "^3.0.0",
-    "express-session": "^1.15.6",
-    "google-auth-library": "^0.12.0",
-    "googleapis": "^25.0.0",
-    "mysql2": "^1.5.2",
-    "nodemon": "^1.17.2",
-    "passport": "^0.4.0",
-    "passport-local": "^1.0.0",
-    "request": "^2.85.0",
-    "sequelize": "^4.36.1"
-  }
+	"name": "Papayas-Project-2",
+	"version": "1.0.0",
+	"description": "",
+	"main": "server.js",
+	"scripts": {
+		"test": "echo \"Error: no test specified\" && exit 1",
+		"start": "node server.js"
+	},
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/petercboss/Papayas-Project-2.git"
+	},
+	"keywords": [],
+	"author": "",
+	"license": "ISC",
+	"bugs": {
+		"url": "https://github.com/petercboss/Papayas-Project-2/issues"
+	},
+	"homepage": "https://github.com/petercboss/Papayas-Project-2#readme",
+	"dependencies": {
+		"bcrypt-nodejs": "0.0.3",
+		"body-parser": "^1.18.2",
+		"dotenv": "^5.0.1",
+		"express": "^4.16.3",
+		"express-handlebars": "^3.0.0",
+		"express-session": "^1.15.6",
+		"google-auth-library": "^0.12.0",
+		"googleapis": "^25.0.0",
+		"mysql2": "^1.5.2",
+		"nodemon": "^1.17.2",
+		"passport": "^0.4.0",
+		"passport-local": "^1.0.0",
+		"request": "^2.85.0",
+		"sequelize": "^4.36.1",
+		"bootstrap": "4.0.0",
+		"jquery": "3.3.1"
+	}
 }
