--- a/package.json
+++ b/package.json
@@ -21,19 +21,21 @@
 	"dependencies": {
 		"bcrypt-nodejs": "0.0.3",
 		"body-parser": "^1.18.2",
+		"bootstrap": "4.0.0",
 		"dotenv": "^5.0.1",
 		"express": "^4.16.3",
 		"express-handlebars": "^3.0.0",
 		"express-session": "^1.15.6",
 		"google-auth-library": "^0.12.0",
 		"googleapis": "^25.0.0",
+		"jquery": "3.3.1",
+		"multiparty": "^4.1.3",
 		"mysql2": "^1.5.2",
+		"node-gmail-api": "^0.6.1",
 		"nodemon": "^1.17.2",
 		"passport": "^0.4.0",
 		"passport-local": "^1.0.0",
 		"request": "^2.85.0",
-		"sequelize": "^4.36.1",
-		"bootstrap": "4.0.0",
-		"jquery": "3.3.1"
+		"sequelize": "^4.36.1"
 	}
 }
