--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
 		"passport-google-oauth": "^1.0.0",
 		"passport-google-oauth20": "^1.0.0",
 		"passport-local": "^1.0.0",
+		"phaser": "^3.3.0",
 		"request": "^2.85.0",
 		"sequelize": "^4.37.4"
 	}
